--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "i18next": "^20.3.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.11.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
